zebra-rpc/src/methods/tests/snapshots/get_mempool_info.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: inner
---
{
  "size": 67,
  "bytes": 32500,
  "usage": 41000
}
