zebra-rpc/src/methods/tests/snapshots/get_mining_info@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: get_mining_info
---
{
  "blocks": 1687104,
  "currentblocksize": 1617,
  "networksolps": 2,
  "networkhashps": 2,
  "chain": "main",
  "testnet": false
}
