zebra-rpc/src/methods/tests/snapshots/get_mining_info@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: get_mining_info
---
{
  "blocks": 10,
  "currentblocksize": 1618,
  "currentblocktx": 0,
  "networksolps": 0,
  "networkhashps": 0,
  "chain": "test",
  "testnet": true
}
